# core-bbbit

./: .travis.yml  CONTRIBUTING.md  INSTALL  Makefile.am  README.md  configure.ac  libbbbitconsensus.pc.in
.tx/: config
build-aux/m4/: bbbit_find_bdb48.m4  bbbit_qt.m4  bbbit_subdir_to_include.m4
contrib/: README.md  bbbit-qt.pro  bbbitd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  bbbit-qt.desktop  bbbit-qt.install  bbbit-qt.lintian-overrides  bbbit-qt.protocol  bbbit-tx.install  bbbitd.bash-completion  bbbitd.examples  bbbitd.install  bbbitd.lintian-overrides  bbbitd.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  symbol-check.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-downloader/: petertodd-key.pgp
contrib/init/: README.md  bbbitd.conf  bbbitd.init  bbbitd.openrc  bbbitd.openrcconf  bbbitd.service  org.bbbit.bbbitd.plist
contrib/linearize/: README.md  (+2 more)
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  addrman.h  alert.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bbbit-cli-res.rc  bbbit-cli.cpp  bbbit-tx-res.rc  bbbit-tx.cpp  bbbitd-res.rc  bbbitd.cpp  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  (+61 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bbbit.cpp  bbbit.qrc  bbbit_locale.qrc  bbbitaddressvalidator.cpp  bbbitaddressvalidator.h  bbbitamountfield.cpp  bbbitamountfield.h  bbbitgui.cpp  bbbitgui.h  bbbitstrings.cpp  bbbitunits.cpp  bbbitunits.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  (+52 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bbbit_af.ts  bbbit_af_ZA.ts  bbbit_ar.ts  bbbit_be_BY.ts  bbbit_bg.ts  bbbit_bg_BG.ts  bbbit_bs.ts  bbbit_ca.ts  bbbit_ca@valencia.ts  bbbit_ca_ES.ts  bbbit_cs.ts  bbbit_cs_CZ.ts  bbbit_cy.ts  bbbit_da.ts  bbbit_de.ts  bbbit_el.ts  bbbit_el_GR.ts  bbbit_en.ts  bbbit_en_GB.ts  bbbit_eo.ts  bbbit_es.ts  bbbit_es_AR.ts  bbbit_es_CL.ts  bbbit_es_CO.ts  bbbit_es_DO.ts  bbbit_es_ES.ts  bbbit_es_MX.ts  bbbit_es_UY.ts  bbbit_es_VE.ts  bbbit_et.ts  bbbit_eu_ES.ts  bbbit_fa.ts  bbbit_fa_IR.ts  bbbit_fi.ts  bbbit_fr.ts  bbbit_fr_CA.ts  bbbit_fr_FR.ts  bbbit_gl.ts  bbbit_he.ts  bbbit_hi_IN.ts  (+43 more)
src/qt/res/: bbbit-qt-res.rc
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: bbbitconsensus.cpp  bbbitconsensus.h  interpreter.cpp  interpreter.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_bbbit_NativeSecp256k1.c  org_bbbit_NativeSecp256k1.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bbbit-util-test.py  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  (+18 more)
src/test/data/: README.md  bbbit-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+151 files in other folders)
